Update Atom.java
I am currently in the alpha version. I'll add more as time passes by.